--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <img class="logo" src="./white-logo.png" alt="logo">
+        <img class="logo" src="../assets/white-logo.png" alt="logo">
     </div>
     <nav> 
        
@@ -31,7 +31,7 @@
     </section>
 
     <section>
-        <img class="banner" src="./banner.png" alt="banner">
+        <img class="banner" src="../assets/banner.png" alt="banner">
     </section>
     
 </body>
